@@ -59,6 +59,8 @@ namespace Orthanc
   static const char* const MIME_WOFF = "application/x-font-woff";
   static const char* const MIME_XML_2 = "text/xml";
   static const char* const MIME_ZIP = "application/zip";
+  static const char* const MIME_DICOM_WEB_JSON = "application/dicom+json";
+  static const char* const MIME_DICOM_WEB_XML = "application/dicom+xml";
 
   // This function is autogenerated by the script
   // "Resources/GenerateErrorCodes.py"
@@ -1107,6 +1109,12 @@ namespace Orthanc
       case MimeType_PrometheusText:
         // https://prometheus.io/docs/instrumenting/exposition_formats/#text-based-format
         return "text/plain; version=0.0.4";
+
+      case MimeType_DicomWebJson:
+        return MIME_DICOM_WEB_JSON;
+                
+      case MimeType_DicomWebXml:
+        return MIME_DICOM_WEB_XML;
                 
       default:
         throw OrthancException(ErrorCode_ParameterOutOfRange);
@@ -1715,6 +1723,14 @@ namespace Orthanc
     else if (mime == MIME_WOFF)
     {
       return MimeType_Woff;
+    }
+    else if (mime == MIME_DICOM_WEB_JSON)
+    {
+      return MimeType_DicomWebJson;
+    }
+    else if (mime == MIME_DICOM_WEB_XML)
+    {
+      return MimeType_DicomWebXml;
     }
     else
     {
