@@ -104,9 +104,11 @@ namespace Orthanc
     MimeType_Svg,
     MimeType_WebAssembly,
     MimeType_Xml,
-    MimeType_Woff,           // Web Open Font Format
+    MimeType_Woff,            // Web Open Font Format
     MimeType_Zip,
-    MimeType_PrometheusText  // Prometheus text-based exposition format (for metrics)
+    MimeType_PrometheusText,  // Prometheus text-based exposition format (for metrics)
+    MimeType_DicomWebJson,
+    MimeType_DicomWebXml
   };
 
   
